--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^4.1.1",
     "vue-baidu-map": "^0.21.22",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-animate": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
